--- a/README.adoc
+++ b/README.adoc
@@ -937,14 +937,6 @@ Next, delete the Istio custom resource definitions by running the following comm
 
 include::{common-includes}/os-tabs.adoc[]
 
-[.tab_content.mac_section.linux_section]
---
-[role=command]
-```
-for i in install/kubernetes/helm/istio-init/files/crd*yaml; do kubectl delete -f $i; done
-```
---
-
 [.tab_content.windows_section]
 --
 [role=command]
@@ -953,6 +945,20 @@ FOR %i in (install\kubernetes\helm\istio-init\files\crd*yaml) DO kubectl delete 
 ```
 --
 
+[.tab_content.mac_section]
+--
+[role=command]
+```
+for i in install/kubernetes/helm/istio-init/files/crd*yaml; do kubectl delete -f $i; done
+```
+--
+
+[.tab_content.linux_section]
+--
+[role=command]
+```
+for i in install/kubernetes/helm/istio-init/files/crd*yaml; do kubectl delete -f $i; done
+```
 Perform the following steps to return your environment to a clean state.
 
 . Point the Docker daemon back to your local machine:
@@ -969,6 +975,9 @@ eval $(minikube docker-env -u)
 minikube stop
 minikube delete
 ```
+--
+
+
 
 // =================================================================================================
 // finish
